# ai-qa-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_firebase_auth.py  003_workflow_templates.py  004_test_pack_fields.py  005_customer_target.py  006_login_as_target.py  007_query_identity_libraries.py  008_org_default_and_oauth.py  009_org_salesforce_username.py  010_knowledge_engine.py  (+3 more)
backend/app/: __init__.py  main.py
backend/tests/: test_account_query_resolver.py  test_account_query_service.py  test_azure_devops_service.py  test_brain_llm_router.py  test_customer_lifecycle_page.py  test_customer_search_rules.py  test_data_change_field_registry.py  test_folder_upload.py  test_form_validation.py  test_golden_test_packs.py  test_identity_selector.py  test_knowledge_engine.py  test_load_customer_by_query.py  test_login_as_planner.py  test_login_as_profile_service.py  test_login_resolver.py  test_playwright_paths.py  test_preview_identities.py  test_primary_group_lookup.py  test_privacy_guard.py  test_query_recommendation.py  test_report_export.py  test_required_field_filler.py  test_sales_office_picklist.py  test_sales_office_rules.py  test_salesforce_oauth.py  test_salesforce_oauth_redirect.py  test_salesforce_oauth_redirect_server.py  test_salesforce_org_service.py  test_salesforce_query.py  test_submit_validation.py  test_test_case_runner_identity.py  test_test_pack_parser.py  test_user_detail_page.py
(+284 files in other folders)
